Squash a few bugs
* Fix background-size: cover not rendering properly on Android
* Add correct HTML code for emdash in yerdle project
* Absolute position caption on home page (from fixed)

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3222,7 +3222,15 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
   Styles for index pages.
 
 //---------------------------------------------------------------------------*/
+html {
+  height: 100%;
+  min-height: 100%; }
+
+body {
+  min-height: 100%; }
+
 .page--home {
+  position: relative;
   background: url('/assets/images/exploratorium-kid.jpg') no-repeat center center fixed;
   background-size: 100%;
   background-size: cover; }
@@ -3240,19 +3248,21 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
       line-height: 1.2; }
     .page--home .home-cover .home-cover__description {
       font-size: 0.875em; }
-    .page--home .home-cover .home-cover__caption {
-      position: fixed;
-      bottom: 0;
-      right: 3em;
-      width: 28em;
-      font-size: 12px;
-      text-align: right;
-      line-height: 1.3; }
     @media (max-width: 48em) {
       .page--home .home-cover {
         margin: 0 auto;
         max-width: 92%;
         font-size: 90%; } }
+  .page--home .home-cover__caption {
+    position: absolute;
+    bottom: 0;
+    right: 3em;
+    max-width: 28em;
+    font-family: 'Whitney SSm A', 'Whitney SSm B', Verdana, Helvetica, sans-serif;
+    color: #fff;
+    font-size: 12px;
+    text-align: right;
+    line-height: 1.3; }
 
 .page--about .about__content {
   font-family: 'Whitney SSm A', 'Whitney SSm B', Verdana, Helvetica, sans-serif; }
