--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -6,7 +6,19 @@
 
 //---------------------------------------------------------------------------*/
 
+
+// janky Android fixes for background-size: cover
+html {
+  height: 100%;
+  min-height: 100%;
+}
+
+body {
+  min-height: 100%;
+}
+
 .page--home {
+  position: relative;
   background: url('/assets/images/exploratorium-kid.jpg')
               no-repeat center center fixed;
     -webkit-background-size: 100%;
@@ -42,25 +54,25 @@
       font-size: 0.875em;
     }
 
-    .home-cover__caption {
-
-      position: fixed;
-      bottom: 0;
-      right: 3em;
-
-      width: 28em;
-
-      font-size: 12px;
-      text-align: right;
-      line-height: 1.3;
-    }
-
     @media (max-width: $breakpoint-medium) {
       margin: 0 auto;
       max-width: 92%;
       font-size: 90%;
     }
+  }
 
+  .home-cover__caption {
+    position: absolute;
+    bottom: 0;
+    right: 3em;
+
+    max-width: 28em;
+
+    font-family: $font-sans;
+    color: $white;
+    font-size: 12px;
+    text-align: right;
+    line-height: 1.3;
   }
 
 }
